Changelog
=========

1.0.0rc2 (Unreleased)
---------------------

* reStructured text fixes [keul]

1.0.0rc1 (2010-09-12)
---------------------

* Plone 4 compatibility [keul]
* The explicit use of *iw.fss* has been removed. The *fss.zcml* is still there and you can still include
  it if you like, but you must do this manually [keul]
* *ISmartLink* also extends the *IImageContent* interface [keul] 
* A better uninstall procedure, that remove Plone UI stuff and restore original linked object status [keul]
* Added the *favicon* field, that drive the icon's link [keul]
* Added the *anchor* field, for manage anchor in internal links [keul] 
* Moved new and old secondary fields to the *Advanced* fieldset [keul]
* The "unlink" event when deleting a referenced object has been removed: keeping an additional index only for
  this feature was not a soo good idea. Now the internal link will display the latest memoized link [keul]
* Aligned the *smartlink_view* with the latest Plone *link_view*, so now will also display the message
  when you are not redirected to the target URL (however this will be untranslated on Plone < 3.3) [keul]
* Added tests [keul]
* Updated and fixed labels and texts all around and i18n translation too [keul]
* Splitted UI error warn when you don't provide neither internal and external link, from the fact that you
  provide both of them [keul]
* When unlinking an internal content, it's cleaned from marker interface [keul]
* Switched front-end and back-end order in the config panel [keul]
* Fixed a bug that force the front-end URLs in config panel to be unique [keul]

0.7.3 (2010-06-03)
------------------

* fix #2 - error upgrading from 0.4.* to 0.7.* (missing utility) [mauro]

0.7.2
-----

* The "*smartLink*" event was using *directlyProvides* instead of *alsoProvides*... this was
  corrupting some target objects (like: it was impossible to internally link a file that
  use blobs) [keul]