@@ -2,15 +2,24 @@
 
 from zope import interface
 from redturtle.smartlink.interfaces import ISmartLinked
+from Products.CMFPlone.utils import getFSVersionTuple
 
+def install(portal, reinstall=False):
+    setup_tool = portal.portal_setup
+    setup_tool.setBaselineContext('profile-redturtle.smartlink:default')
+    setup_tool.runAllImportStepsFromProfile('profile-redturtle.smartlink:default')
+    if getFSVersionTuple()[0]>=4:
+        unregisterIcon(portal)
+    
 
 def uninstall(portal, reinstall=False):
+    setup_tool = portal.portal_setup
+    setup_tool.setBaselineContext('profile-redturtle.smartlink:uninstall')
+    setup_tool.runAllImportStepsFromProfile('profile-redturtle.smartlink:uninstall')
+    if getFSVersionTuple()[0]>=4:
+        unregisterIcon(portal)
     if not reinstall:
-        setup_tool = portal.portal_setup
-        setup_tool.setImportContext('profile-redturtle.smartlink:uninstall')
-        setup_tool.runAllImportSteps()
-        if not reinstall:
-            removeSmartLinkMarks(portal)
+        removeSmartLinkMarks(portal)
 
 
 def removeSmartLinkMarks(portal):
@@ -27,7 +36,7 @@ def removeSmartLinkMarks(portal):
         interface.noLongerProvides(content, ISmartLinked)
         content.reindexObject(['object_provides'])
         log("   unmarked %s" % '/'.join(content.getPhysicalPath()))
-    log("...done.")
+    log("...done. Thanks you for using me!")
 
     # TODO: the perfect world is the one where SmartLink(s) are converted back to ATLink(s)
 
@@ -42,3 +51,15 @@ def unLink(portal, object):
         r.setInternalLink(None)
         r.setExternalLink(object.absolute_url())
         r.reindexObject(['getRemoteUrl'])
+
+def unregisterIcon(portal):
+    """Remove icon expression from Link type"""
+    log = portal.plone_log
+    portal_types = portal.portal_types
+    link = portal_types.getTypeInfo("Link")
+    #link.icon_expr = ''
+    link.content_icon = ''
+    link.manage_changeProperties(content_icon='', icon_expr='')
+    log("Removing icon type info")
+
+
